# openid4vc-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: check.yml  ci.yml  coverage.yml  test.yml
crates/openid4vci/: Cargo.toml
crates/openid4vci-grpc/: Cargo.toml  build.rs
crates/openid4vci-grpc/proto/: access_token.proto  credential_issuer.proto  credential_issuer_metadata.proto  credential_request.proto  error.proto  openid4vci.proto  types.proto
crates/openid4vci-grpc/src/: access_token.rs  client.rs  credential_issuer.rs  error.rs  lib.rs  server.rs  utils.rs
crates/openid4vci/src/: base.rs  credential_issuer_metadata.rs  error.rs  error_response.rs  lib.rs  macros.rs  return_object.rs  validate.rs
crates/openid4vci/src/access_token/: error.rs  error_response.rs  mod.rs
crates/openid4vci/src/credential/: credential.rs  mod.rs
crates/openid4vci/src/credential_issuer/: error.rs  error_code.rs  mod.rs
crates/openid4vci/src/jwt/: error.rs  mod.rs
crates/openid4vci/src/token/: mod.rs
crates/openid4vci/src/types/: authorization_server_metadata.rs  credential.rs  credential_issuer_metadata.rs  credential_offer.rs  credential_request.rs  grants.rs  jwt_vc_json.rs  jwt_vc_json_ld.rs  ldp_vc.rs  mod.rs  mso_mdoc.rs  token_type.rs
crates/siopv2/: Cargo.toml
crates/siopv2-grpc/: Cargo.toml  build.rs
crates/siopv2-grpc/src/: lib.rs
docker/: server.Dockerfile
docs/: openid4vci.md
