[package]
name = "openid4vci-grpc"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
openid4vci = { version = "*", path = "../openid4vci/" }
thiserror = "1.0.39"
serde = { version = "1.0.153", features = ["derive"]  }
serde_json = "1.0.94"
strum = { version = "0.24.1", features = ["derive"] }
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
serde_path_to_error = "0.1.11"

[build-dependencies]
tonic-build = "0.8.4"

[dev-dependencies]
chrono = { version = "0.4.24", features = ["serde"] }

[[bin]]
name = "openid4vci-server"
path = "src/server.rs"

[[bin]]
name = "openid4vci-client"
path = "src/client.rs"
