[package]
name = "openid4vci"

description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
thiserror = "1.0.39"
serde = { version = "1.0.153", features = ["derive"]  }

[dev-dependencies]
serde_json = "1.0.94"
