[package]
name = "openid4vci"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
thiserror = "1.0.39"
serde = { version = "1.0.153", features = ["derive"]  }
serde_json = "1.0.94"
# Currently, 0.1.1 is broken
ssi-dids = "=0.1.0"
ssi-jwk = {version = "0.1.0", default-features = false }
strum = { version = "0.24.1", features = ["derive"] }
urlencoding = "2.1.2"
serde_path_to_error = "0.1.11"
