[package]
name = "siopv2-grpc"

version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
tonic = "0.8.3"
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "siopv2-server"
path = "src/server.rs"

[[bin]]
name = "siopv2-client"
path = "src/client.rs"
